Add support for following the MoCap TODO: make another default behavior.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ rosbuild_genmsg()
 # Crane listener
 rosbuild_add_executable(crane_listener src/crane_listener.cpp 
   src/crane_usb.cpp
-  src/crane_message_handler.cpp)
+  src/crane_message_handler.cpp
+  src/signal_handler.cpp)
 target_link_libraries(crane_listener ftdi)
 #target_link_libraries(crane_listener efence)
