--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,22 +1,25 @@
-cmake_minimum_required(VERSION 2.4.6)
-SET(CMAKE_VERBOSE_MAKEFILE ON)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-#include(/opt/ros/electric/ros/core/rosbuild/rosbuild.cmake)
-set(ROS_BUILD_TYPE RelWithDebInfo)
+cmake_minimum_required(VERSION 2.8.3)
 
-rosbuild_init()
+project(hrp2_14_crane)
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+find_package(catkin REQUIRED COMPONENTS
+    roscpp
+    roslib
+    std_msgs
+    sensor_msgs
+)
 
-rosbuild_genmsg()
+find_package(PkgConfig REQUIRED)
+pkg_search_module(ftdi REQUIRED libftdi)
 
-# Crane listener
-rosbuild_add_executable(crane_listener src/crane_listener.cpp 
+catkin_package()
+
+include_directories(
+    ${catkin_INCLUDE_DIRS}
+    ${ftdi_INCLUDE_DIRS}
+)
+
+add_executable(crane_listener src/crane_listener.cpp 
   src/crane_usb.cpp
-  src/crane_message_handler.cpp
-  src/signal_handler.cpp)
-target_link_libraries(crane_listener ftdi)
-#target_link_libraries(crane_listener efence)
+  src/crane_message_handler.cpp)
+target_link_libraries(crane_listener ${ftdi_LIBRARIES} ${catkin_LIBRARIES})
