Added udev rule for usb and roslaunch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,14 @@ add_executable(crane_listener src/crane_listener.cpp
   src/crane_usb.cpp
   src/crane_message_handler.cpp)
 target_link_libraries(crane_listener ${ftdi_LIBRARIES} ${catkin_LIBRARIES})
+
+install(DIRECTORY launch/
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch)
+
+install(DIRECTORY usb_rules/
+  DESTINATION /etc/udev/rules.d)
+
+install(TARGETS crane_listener
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
